enhance the design a little bit'

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -20,6 +20,11 @@
 }
 .hero .breadcrumb a {
   color: #1e1e1e;
+  transition: .2s;
+}
+.hero .breadcrumb a:hover {
+  color: rgb(243, 85, 37);
+  text-decoration: underline;
 }
 .hero h3 {
   font-size: 3rem;
